# tinyusb_rp2040_print_device_strings

./: .gitignore  CMakeLists.txt
logs/: Log 01 TM T.16000M + MS Sidewinder FFB 2.txt  Log 02, with powered USB hub (Plugable USB 2.0 7-Port Hub with Charging).txt  Log 03 Connected hub wih both joysticks already connected.txt
src/: main.cc  millis.hh  tusb_config.h
